--- a/src/app1/BUILD.bazel
+++ b/src/app1/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/newcl/bazel/src/app1",
     visibility = ["//visibility:private"],
+    deps = ["//proto/app1"],
 )
 
 go_binary(
