--- a/src/app1/BUILD.bazel
+++ b/src/app1/BUILD.bazel
@@ -1,14 +1,15 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "app1_lib",
+    name = "app1",
     srcs = ["app.go"],
     importpath = "github.com/newcl/bazel/src/app1",
-    visibility = ["//visibility:private"],
+    visibility = ["//visibility:public"],
 )
 
 go_test(
     name = "app1_test",
     srcs = ["app_test.go"],
     embed = [":app1"],
+    deps = ["@com_github_stretchr_testify//assert"],
 )
