--- a/src/app1/main/BUILD.bazel
+++ b/src/app1/main/BUILD.bazel
@@ -5,12 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/newcl/bazel/src/app1/main",
     visibility = ["//visibility:private"],
-    deps = [
-        "//proto/app1",
-        "@com_github_rs_zerolog//:zerolog",
-        "@com_github_rs_zerolog//log",
-        "@org_uber_go_fx//:fx",
-    ],
+    deps = ["//src/app1/cmd"],
 )
 
 go_binary(
