--- a/src/app1/cmd/BUILD.bazel
+++ b/src/app1/cmd/BUILD.bazel
@@ -5,5 +5,10 @@ go_library(
     srcs = ["serve.go"],
     importpath = "github.com/newcl/bazel/src/app1/cmd",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_spf13_cobra//:cobra"],
+    deps = [
+        "@com_github_rs_zerolog//:zerolog",
+        "@com_github_rs_zerolog//log",
+        "@com_github_spf13_cobra//:cobra",
+        "@org_uber_go_fx//:fx",
+    ],
 )
