--- a/src/app1/cmd/BUILD.bazel
+++ b/src/app1/cmd/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "@com_github_rs_zerolog//:zerolog",
         "@com_github_rs_zerolog//log",
         "@com_github_spf13_cobra//:cobra",
+        "@com_github_spf13_viper//:viper",
         "@org_uber_go_fx//:fx",
     ],
 )
